android_library(
        visibility = ["//visibility:public"],
        name = "aarbin",
        srcs = glob(["src/main/java/**/*.java"]),
        resource_files = glob(["src/main/res/**/*"]),
        manifest = "src/main/AndroidManifest.xml",
        custom_package = "com.spotify.music.andlib",
        deps = ["//andlib/innerandlib:inneraar"]
    )

android_local_test(
  name = "AllTests",
  test_class="com.spotify.music.andlib.AllTests",
  srcs = glob(["andlib/src/test/java/**/*.java"]),
  custom_package = "com.spotify.music.andlib",
  deps = [
    "//:aarbin",
    "@robolectric//bazel:robolectric",
    "//bazeltestutil:jar"
  ],
)
