
java_library(
	visibility = ["//visibility:public"],
    name = "jar",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = ["@com_google_guava_guava//jar"]
)

java_test(
    name = "Lib2Test",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    deps = [
        ":jar",
        "@junit_junit//jar",
    ],
)