android_library(
        visibility = ["//visibility:public"],
        name = "inneraar",
        srcs = glob(["src/main/java/**/*.java"]),
        resource_files = glob(["src/main/res/**/*"]),
        manifest = "src/main/AndroidManifest.xml",
        custom_package = "com.spotify.music.innerandlib",
    )
